// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-comment-event Renders \`create-comment-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <!---->
        <div
          class="v-input v-text-field theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <label
                  aria-hidden="true"
                  class="v-label theme--light"
                  style="left: 0px; position: absolute;"
                >
                  Comment
                </label>
                <input
                  aria-label="Comment"
                  name="comment"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-comment-event Renders \`create-comment-event\` with items 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <alarm-general-table-stub
          items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        />
        <hr
          class="my-3 v-divider theme--light"
        />
        <div
          class="v-input v-text-field theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <label
                  aria-hidden="true"
                  class="v-label theme--light"
                  style="left: 0px; position: absolute;"
                >
                  Comment
                </label>
                <input
                  aria-label="Comment"
                  name="comment"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;
